--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <link rel="stylesheet" href="assets/css/main.css">
    <!-- Vitamin setup : https://github.com/Decathlon/vitamin-web -->
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
+   <!-- Google icons setup : https://fonts.google.com/icons -->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -26,14 +28,13 @@
             <div id="navigation--content">
                <!-- 1 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle"><i class="fa-solid fa-check"></i><span class="text__hide">1</span>
-                  </p>
+                  <p class="navigation--box__circle">1</p>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line">
                   <p class="navigation--box__circle">2</p>
-                  <p class="navigation--box__text">Morpho</p>
+                  <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line">
@@ -43,7 +44,7 @@
                <!-- 4 -->
                <div class="navigation--box line">
                   <p class="navigation--box__circle">4</p>
-                  <p class="navigation--box__text">Récap</p>
+                  <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
@@ -68,14 +69,13 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer">
-            <a class="footer--button__next" href="morphologie.html">Continuer<span></span></a>
+            <a class="footer--button__next" href="morphologie.html">Continuer<i
+                  class="material-icons">chevron_right</i></a>
          </div>
       </section>
       <!-- Right part : Image (only on large devices) -->
       <section id="section--image"></section>
    </main>
-   <!-- Fontawesome setup : https://fontawesome.com/ -->
-   <script src="https://kit.fontawesome.com/83ce2736b9.js" crossorigin="anonymous"></script>
    <script src="/assets/scripts/index.js"></script>
 </body>
 
