--- a/pratique.html
+++ b/pratique.html
@@ -14,6 +14,8 @@
    <link rel="stylesheet" href="assets/css/main.css">
    <!-- Vitamin setup : https://github.com/Decathlon/vitamin-web -->
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
+   <!-- Google icons setup : https://fonts.google.com/icons -->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -27,17 +29,19 @@
                <!-- 1 -->
                <!-- line-valid : Display validate check icon and blue background -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle"><i class="fa-solid fa-check"></i><span
-                        class="text__hide">1</span>
+                  <p class="navigation--box-v__circle">
+                     <i class="material-icons">done</i>
+                     <span class="text__hide">1</span>
                   </p>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle"><i class="fa-solid fa-check"></i><span
-                        class="text__hide">2</span>
+                  <p class="navigation--box-v__circle">
+                     <i class="material-icons">done</i>
+                     <span class="text__hide">2</span>
                   </p>
-                  <p class="navigation--box__text">Morpho</p>
+                  <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line">
@@ -47,7 +51,7 @@
                <!-- 4 -->
                <div class="navigation--box line">
                   <p class="navigation--box__circle">4</p>
-                  <p class="navigation--box__text">Récap</p>
+                  <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
@@ -75,7 +79,7 @@
             <div class="card--container">
                <div class="card--desc">
                   <h4>Votre utilisation</h4>
-                  <a href="#">
+                  <a href="#" id="more-information--btn">
                      <img src=" /assets/images/icon-information.svg" alt="Icône modale">
                      <p>En savoir plus</p>
                   </a>
@@ -94,33 +98,45 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer--morphologie">
-            <a class="footer--button__prev" href="morphologie.html"><span></span>Retour</a>
-            <a class="footer--button__next" href="#">Continuer<span></span></a>
+            <a class="footer--button__prev" href="morphologie.html"><i class="material-icons">chevron_left</i>Retour</a>
+            <a class="footer--button__next" href="resume.html">Continuer<i class="material-icons">chevron_right</i></a>
          </div>
       </section>
       <!-- Right part : Image (only on large devices) -->
       <section id="section--image--pratique"></section>
       <!-- Modal -->
-      <section id="section--modal">
+      <section id="pratique--modal">
          <div class="modal--container">
             <div class="modal--menu">
-               <i class="fa-solid fa-xmark fa-xl"></i>
-               <h3>Comment mesurer ?</h3>
+               <i class="material-icons btnClose">close</i>
+               <h3>Choix de votre utilisation</h3>
                <div class="modal--context">
-                  <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
-                  <div class="modale--content">
-                     <h4>Entrejambe</h4>
-                     <p><i class="fa-solid fa-ruler"></i><span class="text__underline">Matériel nécessaire :</span> un
-                        mètre-ruban, une équerre
-                        (ou objet
-                        avec angle droit), un crayon et votre tenue de cycliste.</p>
-                     <p>Mettez-vous debout, pieds nus et adossé au mur. Vos pieds sont légèrement écartes (environ 15 à
-                        20 cm max.) et vos talons touchent le mur. <br>
-                        Regardez droit devant vous, ensuite, prenez une équerre ou tout autre objet possédant un angle
-                        droit (ex: un livre) contre le mur et faites le glisser entre vos jambes jusqu’à votre périné.
-                        <br>
-                        Mesurer la distance entre l’angle droit et le sol
-                     </p>
+                  <!-- First description -->
+                  <div id="first-content">
+                     <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                     <div class="modale--content">
+                        <h4>Titre de la section</h4>
+                        <p>Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed dignissim
+                           pellentesque pellentesque. Integer augue dui malesuada maecenas suscipit consequat tincidunt
+                           sodales nec. Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed
+                           dignissim
+                           pellentesque pellentesque.
+                        </p>
+                     </div>
+                  </div>
+                  <hr>
+                  <!-- Second description -->
+                  <div id="second-content">
+                     <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                     <div class="modale--content">
+                        <h4>Titre de la section</h4>
+                        <p>Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed dignissim
+                           pellentesque pellentesque. Integer augue dui malesuada maecenas suscipit consequat tincidunt
+                           sodales nec. Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed
+                           dignissim
+                           pellentesque pellentesque.
+                        </p>
+                     </div>
                   </div>
                </div>
                <div class="block vtmn-flex vtmn-flex-row vtmn-flex-wrap"
@@ -131,9 +147,7 @@
          </div>
       </section>
    </main>
-   <!-- Fontawesome setup : https://fontawesome.com/ -->
-   <script src="https://kit.fontawesome.com/83ce2736b9.js" crossorigin="anonymous" defer></script>
-   <script src="/assets/scripts/index.js" defer></script>
+   <script src="/assets/scripts/pratique.js" defer></script>
 </body>
 
 </html>
