--- a/morphologie.html
+++ b/morphologie.html
@@ -14,6 +14,8 @@
    <link rel="stylesheet" href="assets/css/main.css">
    <!-- Vitamin setup : https://github.com/Decathlon/vitamin-web -->
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
+   <!-- Google icons setup : https://fonts.google.com/icons -->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -26,15 +28,16 @@
             <div id="navigation--content">
                <!-- 1 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle"><i class="fa-solid fa-check"></i><span
-                        class="text__hide">1</span>
+                  <p class="navigation--box-v__circle">
+                     <i class="material-icons">done</i>
+                     <span class="text__hide">1</span>
                   </p>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line">
                   <p class="navigation--box__circle">2</p>
-                  <p class="navigation--box__text">Morpho</p>
+                  <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line">
@@ -44,7 +47,7 @@
                <!-- 4 -->
                <div class="navigation--box line">
                   <p class="navigation--box__circle">4</p>
-                  <p class="navigation--box__text">Récap</p>
+                  <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
@@ -162,8 +165,9 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer--morphologie">
-            <a class="footer--button__prev" href="index.html"><span></span>Retour</a>
-            <a class="footer--button__next" href="pratique.html">Continuer<span></span></a>
+            <a class="footer--button__prev" href="index.html"><i class="material-icons">chevron_left</i>Retour</a>
+            <a class="footer--button__next" href="pratique.html">Continuer<i
+                  class="material-icons">chevron_right</i></a>
          </div>
       </section>
       <!-- Right part : Image (only on large devices) -->
@@ -172,16 +176,19 @@
       <section id="section--modal">
          <div class="modal--container">
             <div class="modal--menu">
-               <i class="fa-solid fa-xmark fa-xl"></i>
+               <i class="material-icons btnClose">close</i>
                <h3>Comment mesurer ?</h3>
                <div class="modal--context">
                   <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
                   <div class="modale--content">
                      <h4>Entrejambe</h4>
-                     <p><i class="fa-solid fa-ruler"></i><span class="text__underline">Matériel nécessaire :</span> un
+                     <p>
+                        <i class="material-icons">straighten</i>
+                        <span class="text__underline">Matériel nécessaire :</span> un
                         mètre-ruban, une équerre
                         (ou objet
-                        avec angle droit), un crayon et votre tenue de cycliste.</p>
+                        avec angle droit), un crayon et votre tenue de cycliste.
+                     </p>
                      <p>Mettez-vous debout, pieds nus et adossé au mur. Vos pieds sont légèrement écartes (environ 15 à
                         20 cm max.) et vos talons touchent le mur. <br />
                         Regardez droit devant vous, ensuite, prenez une équerre ou tout autre objet possédant un angle
@@ -199,8 +206,6 @@
          </div>
       </section>
    </main>
-   <!-- Fontawesome setup : https://fontawesome.com/ -->
-   <script src="https://kit.fontawesome.com/83ce2736b9.js" crossorigin="anonymous" defer></script>
    <script src="/assets/scripts/index.js" defer></script>
 </body>
 
