Update links and icons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer">
-            <a class="footer--button__next" href="morphologie.html">Continuer<i
+            <a class="footer--button__next" href="morphologie.html"><span class="hide-small">Continuer</span><i
                   class="material-icons">chevron_right</i></a>
          </div>
       </section>
