--- a/pratique.html
+++ b/pratique.html
@@ -16,6 +16,7 @@
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
    <!-- Google icons setup : https://fonts.google.com/icons -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 
 <body>
@@ -29,33 +30,33 @@
                <!-- 1 -->
                <!-- line-valid : Display validate check icon and blue background -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="index.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">1</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="morphologie.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">2</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">3</p>
+                  <a href="#" class="navigation--box__circle">3</a>
                   <p class="navigation--box__text">Pratique</p>
                </div>
                <!-- 4 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">4</p>
+                  <a href="#" class="navigation--box__circle">4</a>
                   <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
-                  <p class="navigation--box__circle">5</p>
+                  <a href="#" class="navigation--box__circle">5</a>
                   <p class="navigation--box__text">Résultat</p>
                </div>
             </div>
@@ -80,7 +81,7 @@
                <div class="card--desc">
                   <h4>Votre utilisation</h4>
                   <a href="#" id="more-information--btn">
-                     <img src=" /assets/images/icon-information.svg" alt="Icône modale">
+                     <i class="material-symbols-outlined">info</i>
                      <p>En savoir plus</p>
                   </a>
                </div>
@@ -98,8 +99,8 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer--morphologie">
-            <a class="footer--button__prev" href="morphologie.html"><i class="material-icons">chevron_left</i>Retour</a>
-            <a class="footer--button__next" href="resume.html">Continuer<i class="material-icons">chevron_right</i></a>
+            <a class="footer--button__prev" href="morphologie.html"><i class="material-icons">chevron_left</i><span class="hide-small">Retour</span></a>
+            <a class="footer--button__next" href="resume.html"><span class="hide-small">Continuer</span><i class="material-icons">chevron_right</i></a>
          </div>
       </section>
       <!-- Right part : Image (only on large devices) -->
