--- a/resultat.html
+++ b/resultat.html
@@ -16,8 +16,7 @@
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
    <!-- Google icons setup : https://fonts.google.com/icons -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 
 <body>
@@ -31,44 +30,44 @@
                <!-- 1 -->
                <!-- line-valid : Display validate check icon and blue background -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="index.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">1</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="morphologie.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">2</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="pratique.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">3</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Pratique</p>
                </div>
                <!-- 4 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="resume.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">4</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
-                  <p class="navigation--box__circle">5</p>
+                  <a href="#" class="navigation--box__circle">5</a>
                   <p class="navigation--box__text">Résultat</p>
                </div>
             </div>
          </div>
-         <div id="form" style="text-align: center; height: 55vh; padding: 1rem 2rem 1rem 2rem;">
+         <div id="form" style="text-align: center; height: 55vh; padding: 1rem 1.8rem;">
             <h1>Résultat</h1>
             <h2>Retrouvez ci-dessous votre configuration 100% personnalisée !</h2>
             <div class="resultat--block">
@@ -84,7 +83,7 @@
                            <p>72 cm</p>
                         </div>
                         <a href="#">
-                           <img src=" /assets/images/icon-information.svg" alt="Icône modale">
+                           <i class="material-symbols-outlined">info</i>
                            <p>En savoir plus</p>
                         </a>
                      </div>
@@ -102,7 +101,7 @@
                            <p>8 cm</p>
                         </div>
                         <a href="#">
-                           <img src=" /assets/images/icon-information.svg" alt="Icône modale">
+                           <i class="material-symbols-outlined">info</i>
                            <p>En savoir plus</p>
                         </a>
                      </div>
@@ -120,7 +119,7 @@
                            <p>6 cm</p>
                         </div>
                         <a href="#">
-                           <img src=" /assets/images/icon-information.svg" alt="Icône modale">
+                           <i class="material-symbols-outlined">info</i>
                            <p>En savoir plus</p>
                         </a>
                      </div>
@@ -138,7 +137,7 @@
                            <p>54 cm</p>
                         </div>
                         <a href="#">
-                           <img src=" /assets/images/icon-information.svg" alt="Icône modale">
+                           <i class="material-symbols-outlined">info</i>
                            <p>En savoir plus</p>
                         </a>
                      </div>
@@ -148,9 +147,7 @@
          </div>
          <div id="footer--resultat">
             <a class="footer--button__how" href="#"><i class="material-symbols-outlined">
-                  play_circle</i>Comment le faire
-               moi-même
-               ?</a>
+                  play_circle</i>Comment le faire<span class="display-none"> moi-même ?</span></a>
             <a href="resume.html" class="vtmn-link">Revenir en arrière</a>
          </div>
       </section>
