--- a/resume.html
+++ b/resume.html
@@ -29,36 +29,36 @@
                <!-- 1 -->
                <!-- line-valid : Display validate check icon and blue background -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="index.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">1</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="morphologie.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">2</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="pratique.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">3</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Pratique</p>
                </div>
                <!-- 4 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">4</p>
+                  <a href="#" class="navigation--box__circle">4</a>
                   <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
-                  <p class="navigation--box__circle">5</p>
+                  <a href="#" class="navigation--box__circle">5</a>
                   <p class="navigation--box__text">Résultat</p>
                </div>
             </div>
@@ -109,8 +109,8 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer--morphologie">
-            <a class="footer--button__prev" href="pratique.html"><i class="material-icons">chevron_left</i>Retour</a>
-            <a class="footer--button__next" href="resultat.html">Continuer<i
+            <a class="footer--button__prev" href="pratique.html"><i class="material-icons">chevron_left</i><span class="hide-small">Retour</span></a>
+            <a class="footer--button__next" href="resultat.html"><span class="hide-small">Continuer</span><i
                   class="material-icons">chevron_right</i></a>
          </div>
       </section>
