--- a/morphologie.html
+++ b/morphologie.html
@@ -16,6 +16,7 @@
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
    <!-- Google icons setup : https://fonts.google.com/icons -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 
 <body>
@@ -28,30 +29,30 @@
             <div id="navigation--content">
                <!-- 1 -->
                <div class="navigation--box line-valid">
-                  <p class="navigation--box-v__circle">
+                  <a href="index.html" class="navigation--box-v__circle">
                      <i class="material-icons">done</i>
                      <span class="text__hide">1</span>
-                  </p>
+                  </a>
                   <p class="navigation--box__text">Profil</p>
                </div>
                <!-- 2 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">2</p>
+                  <a href="#" class="navigation--box__circle">2</a>
                   <p class="navigation--box__text">Morpho<span class="display-none">logie</span></p>
                </div>
                <!-- 3 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">3</p>
+                  <a href="#" class="navigation--box__circle">3</a>
                   <p class="navigation--box__text">Pratique</p>
                </div>
                <!-- 4 -->
                <div class="navigation--box line">
-                  <p class="navigation--box__circle">4</p>
+                  <a href="#" class="navigation--box__circle">4</a>
                   <p class="navigation--box__text">Récap<span class="display-none">itulatif</span></p>
                </div>
                <!-- 5 -->
                <div class="navigation--box">
-                  <p class="navigation--box__circle">5</p>
+                  <a href="#" class="navigation--box__circle">5</a>
                   <p class="navigation--box__text">Résultat</p>
                </div>
             </div>
@@ -85,7 +86,7 @@
                      </div>
                   </div>
                   <a href="#">
-                     <img src="/assets/images/icon-information.svg" alt="Icône modale">
+                     <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
                </div>
@@ -110,7 +111,7 @@
                      </div>
                   </div>
                   <a href="#" id="modalEntrejambe">
-                     <img src="/assets/images/icon-information.svg" alt="Icône modale">
+                     <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
                </div>
@@ -132,7 +133,7 @@
                      </div>
                   </div>
                   <a href="#">
-                     <img src="/assets/images/icon-information.svg" alt="Icône modal">
+                     <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
                </div>
@@ -154,7 +155,7 @@
                      </div>
                   </div>
                   <a href="#">
-                     <img src="/assets/images/icon-information.svg" alt="Icône modal">
+                     <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
                </div>
@@ -165,8 +166,8 @@
             <div id="form--circles__4"></div>
          </div>
          <div id="footer--morphologie">
-            <a class="footer--button__prev" href="index.html"><i class="material-icons">chevron_left</i>Retour</a>
-            <a class="footer--button__next" href="pratique.html">Continuer<i
+            <a class="footer--button__prev" href="index.html"><i class="material-icons">chevron_left</i><span class="hide-small">Retour</span></a>
+            <a class="footer--button__next" href="pratique.html"><span class="hide-small">Continuer</span><i
                   class="material-icons">chevron_right</i></a>
          </div>
       </section>
@@ -190,10 +191,10 @@
                         avec angle droit), un crayon et votre tenue de cycliste.
                      </p>
                      <p>Mettez-vous debout, pieds nus et adossé au mur. Vos pieds sont légèrement écartes (environ 15 à
-                        20 cm max.) et vos talons touchent le mur. <br />
+                        20 cm max.) et vos talons touchent le mur. <br>
                         Regardez droit devant vous, ensuite, prenez une équerre ou tout autre objet possédant un angle
                         droit (ex: un livre) contre le mur et faites le glisser entre vos jambes jusqu’à votre périné.
-                        <br />
+                        <br>
                         Mesurer la distance entre l’angle droit et le sol
                      </p>
                   </div>
