--- a/pratique.html
+++ b/pratique.html
@@ -11,7 +11,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
       rel="stylesheet">
-      <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="/assets/css/main.css">
    <!-- Vitamin setup : https://github.com/Decathlon/vitamin-web -->
    <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
    <!-- Google icons setup : https://fonts.google.com/icons -->
