--- a/resultat.html
+++ b/resultat.html
@@ -13,7 +13,7 @@
       rel="stylesheet">
    <link rel="stylesheet" href="assets/css/main.css">
    <!-- Vitamin setup : https://github.com/Decathlon/vitamin-web -->
-   <link rel="stylesheet" href="node_modules/@vtmn/css/dist/index.css">
+   <link rel="stylesheet" href="https://unpkg.com/@vtmn/css">
    <!-- Google icons setup : https://fonts.google.com/icons -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
